--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.18.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
